# 3d-graphics

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
src/: main.cc  main.test.cc
src/graphics/: graphics.cc  graphics.h
src/math/matrix44/: matrix44.cc  matrix44.h
src/math/vector3/: vector3.cc  vector3.h  vector3.test.cc
src/matrix/: matrix.cc  matrix.h  matrix.test.cc
src/matrix44/: matrix44.cc  matrix44.h
src/mesh/: mesh.cc  mesh.h
src/triangle/: triangle.cc  triangle.h
src/vector3/: vector3.cc  vector3.h  vector3.test.cc
